--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 # Project exclude paths
 /venv/
+coronavirus_web/useful.txt
+coronavirus_web/temp_parser.py
+coronavirus_web/temp_parsed_data.txt
+coronavirus_web/temp_parser_from_file.py
